Chnaged: feature image: first kernal patch post

--- a/public/index.html
+++ b/public/index.html
@@ -864,7 +864,7 @@ chatbot-id="cmik2u33w000d13tvhblr5sjm">
   
     <div class="flex-none relative overflow-hidden thumbnail_card">
       <img
-        src="/posts/git-email-copy/feature_hu_66a92149774c60a0.webp"
+        src="/posts/your-first-kernal-patch/feature_hu_b869f27faa006d6a.webp"
         alt="Your First Kernel Patch"
         loading="lazy"
         decoding="async"
@@ -876,7 +876,7 @@ chatbot-id="cmik2u33w000d13tvhblr5sjm">
     <header>
       <a
         
-          href="/posts/git-email-copy/"
+          href="/posts/your-first-kernal-patch/"
         
         class="not-prose before:absolute before:inset-0 decoration-primary-500 dark:text-neutral text-xl font-bold text-neutral-800 hover:underline hover:underline-offset-2">
         <h2>
